Registration api -online nomination
